# MatrixChallenge

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  CorrectnessTests.cpp  Matrix.hpp  Profiler.cpp  Rand.hpp
